Updated photos and fixed layout issues

--- a/_assets/equipment.css
+++ b/_assets/equipment.css
@@ -10,6 +10,9 @@
     filter: alpha(opacity=50);
 }
 
+.span12 {
+    margin-bottom: 20px;
+}
 /*@media screen and (max-width: 979px) {
     
 }*/
@@ -68,20 +71,20 @@
     background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/Sennheiser_EW_112P_G3_A_EW112_p_G3_Camera_Mount_618739.jpg");
 }
 #epson760 {
-    background-image: url();
+    background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/1025191388.jpg");
 }
 #epson1760 {
-    background-image: url();
+    background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/1760W_ProfileLeft.jpg");
 }
 #benq {
-    background-image: url();
+    background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/1441268070thumb.jpg");
 }
 #ipad {
-    background-image: url();
+    background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/iPad_2_800a_thumb800.jpg");
 }
 #android {
-    background-image: url();
+    background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/google_nexus_7_android_tablet_1.jpg");
 }
 #acer {
-    background-image: url();
+    background-image: url("http://lfslc.sites.olt.ubc.ca/files/2016/11/AspireE-AspireE15-E5-532-E5-573-E5-574-E5-522-E5-552-gray-glare-preview.png");
 }
